[package]
name = "mprove"
version = "0.1.0"
authors = [
    "Suyash Bagad <suyashbagad@iitb.ac.in>",
]

[lib]
crate-type = ["lib"]

[dependencies]
curv = { git = "https://github.com/KZen-networks/curv" , tag = "v0.2.0", features =  ["ec_ed25519"]}
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7.3"
time = "0.1"
libc = "0.2.45"
hex = "0.3.2"
flame = "0.2.2"
curve25519-dalek = "2.0.0"
sha2 = "0.8.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "mprove"
path = "benches/mprove.rs"
harness = false
