[package]
name = "mprove"
version = "0.1.0"
authors = [
    "Suyash Bagad <suyashbagad@iitb.ac.in>",
]

[lib]
crate-type = ["lib"]

[dependencies]
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7.3"
libc = "0.2.45"
flame = "0.2.2"
curve25519-dalek = "2.0.0"
sha2 = "0.8.1"
structopt = "0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "mprove"
path = "benches/mprove.rs"
harness = false
